# selenium-project

./: README.md  pyproject.toml  test.py
src/selenium_project/: __init__.py
