[project]
name = "selenium-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "saidharshan05", email = "saidharshan@nitimis.com" }
]
dependencies = [
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
    "chromedriver>=2.24.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/selenium_project"]
